--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -1,6 +1,13 @@
-<div id='container' ng-module="RBKme.home">
-<!-- Your code here -->
-
+<div ng-controller="HomeController" class="md-padding" id="popupContainer" ng-cloak>
+    <div>
+     	<input type='text' ng-model='search' placeholder='filter' /><br><br>
+     	<div class="users">
+        <div class="user"
+            ng-repeat="user in data.users | filter:search">
+            <img src="{{user.image}}" class="profilePic img-circle" ng-click="showProfile($event,user)" style="width:20%">
+        	<br><br>
+    	</div>
+    </div>
 </div>
 
 
