Added the newBlog html template and implemented its controller

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
 
     <script src="app/auth/auth.js"></script>
     <script src="app/blog/blog.js"></script>
+    <script src="app/blog/newBlog.js"></script>
     <script src="app/home/d3.js"></script>
     <script src="app/home/home.js"></script>
     <script src="app/profile/profileEdit.js"></script>
