--- a/client/app/profile/profileView.html
+++ b/client/app/profile/profileView.html
@@ -26,7 +26,7 @@
     </md-dialog-content>
     <md-dialog-actions layout="row">
       <span flex></span>
-      <md-button ng-click="answer('Edit')">
+      <md-button ng-click="answer('Edit')" ng-show="sameUser()===true" ng-hide="sameUser()===false">
        Edit Profile
       </md-button>
       <md-button ng-click="cancel()">
