--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -1,11 +1,12 @@
 <div ng-controller="HomeController" class="md-padding" id="popupContainer" ng-cloak>
     <div>
      	<input type='text' ng-model='search' placeholder='filter' /><br><br>
-     	<div class="users">
+    </div>
+    <div class="users">
         <div class="user"
             ng-repeat="user in data.users | filter:search">
             <img src="{{user.image}}" class="profilePic img-circle" ng-click="showProfile($event,user)" style="width:20%">
-        	<br><br>
+            <br><br>
     	</div>
     </div>
 </div>
