Implemented the forgotPassUser functionality

--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -25,7 +25,7 @@
             placeholder="Enter your password here" value="{user.password}" class="editInput"/><br><br>
         </div>
         <div>
-          <a href='#' ng-click="forgotPassword()">Forgot username or password?</a>
+          <a href='#' ng-click="forgotPassword($event)">Forgot username or password?</a>
         </div>
         <div>
           <br>
