--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -2,10 +2,10 @@
     <div>
      	<input type='text' ng-model='search' placeholder='filter' /><br><br>
     </div>
-    <div class="users">
-        <div class="user"
+    <div class="st_thumbs_wrapper">
+        <div class="st_thumbs"
             ng-repeat="user in data.users | filter:search">
-            <img src="{{user.image}}" class="profilePic img-circle" ng-click="showProfile($event,user)" style="width:20%">
+            <img src="{{user.image}}" ng-click="showProfile($event,user)" style="width:20%">
             <br><br>
     	</div>
     </div>
