Added a page for the admin in order to add new students

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
     <script src="app/services/services.js"></script>
     <script src="uploadToImgur.js"></script>
     <script src="config/api_keys.js"></script>
+    <script src="app/admin/admin.js"></script>
     <script src="app/app.js"></script>
   </body>
 </html>
