Making the toolbar color pink and editing the main page

--- a/client/app/auth/forgot.html
+++ b/client/app/auth/forgot.html
@@ -1,8 +1,9 @@
 <md-dialog aria-label="Signin"  ng-cloak>
   <form>
     <md-toolbar>
-      <div class="md-toolbar-tools">
+      <div class="md-toolbar-tools myToolbar">
         <span flex></span>
+      </div>
     </md-toolbar>
     <br>
     <md-dialog-content>
