--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="Signin"  ng-cloak>
   <form>
     <md-toolbar>
-      <div class="md-toolbar-tools">
+      <div class="md-toolbar-tools myToolbar">
         <span flex></span>
       </div>
     </md-toolbar>
@@ -22,7 +22,7 @@
             placeholder="Enter your password here" value="{user.password}" class="editInput"/><br><br>
         </div>
         <div>
-          <a href='#' ng-click="forgotPassword($event)">Forgot username or password?</a>
+          <a href='#' ng-click="forgotPassword($event)" style="color: #B51A82;">Forgot username or password?</a>
         </div>
         <div>
           <br>
