--- a/client/app/profile/profileEdit.html
+++ b/client/app/profile/profileEdit.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="Profile"  ng-cloak>
   <form>
     <md-toolbar>
-      <div class="md-toolbar-tools">
+      <div class="md-toolbar-tools myToolbar">
         <span flex></span>
       </div>
     </md-toolbar>
