--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,8 @@
     <script src="app/auth/auth.js"></script>
     <script src="app/blog/blog.js"></script>
     <script src="app/blog/newBlog.js"></script>
+    <script src="app/messages/messages.js"></script>
+    <script src="app/messages/newMsg.js"></script>
     <script src="app/home/home.js"></script>
     <script src="app/profile/profileEdit.js"></script>
     <script src="app/profile/profileView.js"></script>
