--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
     <script src="app/blog/newBlog.js"></script>
     <script src="app/messages/messages.js"></script>
     <script src="app/messages/newMsg.js"></script>
+    <script src="app/messages/msgHistory.js"></script>
     <script src="app/home/home.js"></script>
     <script src="app/profile/profileEdit.js"></script>
     <script src="app/profile/profileView.js"></script>
