--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -9,7 +9,7 @@
      <div class="st_thumbs "
             ng-repeat="user in data.users | filter:search">
 
-            <img ng-src="{{user.image}}" ng-click="showProfile($event,user)" style="width:20%">
+            <img ng-if="user.username!=='admin'" ng-src="{{user.image}}" ng-click="showProfile($event,user)" style="width:20%">
 
             <br><br>
     	</div> <center>
