--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -9,16 +9,16 @@
     <md-dialog-content>
 
           <div>
-          <label for="username" class="editLabel">&nbsp;&nbsp;&nbsp;&nbsp;Username</label>
+          <label for="username" class="editLabel col-lg-2 col-md-2 col-sm-2">&nbsp;&nbsp;&nbsp;&nbsp;Username</label>
           <input name='username' type="text"
             ng-model="user.username"
-            placeholder="Enter your username here" value="{user.username}" class="editInput"/><br><br>
+            placeholder="Enter your username here" value="{user.username}" class="editInput col-lg-8 col-md-8 col-sm-8"/><br><br>
         </div>
                 <div>
-          <label for="password" class="editLabel">&nbsp;&nbsp;&nbsp;&nbsp;Password</label>
+          <label for="password" class="editLabel col-lg-2 col-md-2 col-sm-2">&nbsp;&nbsp;&nbsp;&nbsp;Password</label>
           <input name='password' type="password"
             ng-model="user.password"
-            placeholder="Enter your password here" value="{user.password}" class="editInput"/><br><br>
+            placeholder="Enter your password here" value="{user.password}" class="editInput col-lg-8 col-md-8 col-sm-8"/><br><br>
         </div>
         <div>
           <a href='#' ng-click="forgotPassword($event)" style="color: grey;">Forgot username or password?</a>
