--- a/client/app/messages/newMsg.html
+++ b/client/app/messages/newMsg.html
@@ -21,8 +21,7 @@
 
         <div>
           <br><br>
-            <textarea rows="10" cols="60" name="text" ng-model="msg.text" placeholder="Enter your content here"
-           value="{msg.msg}" class="editInput"> 
+            <textarea rows="10" cols="60" name="text" ng-model="msg.text" placeholder="Enter your content here" value="{msg.msg}" style="float: center; width: 80%;"> 
            </textarea><br><br>
         </div>
         <div>
