--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -6,7 +6,7 @@
 <center><h1 style="color:white;margin-top:1em;font-size:60px;font-family:"Arial Black", Gadget, sans-serif">RBKme</h1><center>
 
    <center> <div >
-     	<input class='search' style='margin-top: 5em' type='text' ng-model='search' placeholder='search' /><br><br>
+     	<input class='search' style='margin-top: 5em; border-color: white;' type='text' ng-model='search' placeholder='search' /><br><br>
     </div> </center>
     
 
