--- a/client/app/messages/messages.html
+++ b/client/app/messages/messages.html
@@ -6,7 +6,7 @@
 
 <div ng-controller="MsgController" class="md-padding" ng-cloak style="height:200%;margin-top:10em;" >
     <div>
-     <center>	<input class='search' type='text' ng-model='search' placeholder='filter'/> </center>
+     <center>	<input class='search' style="border-color: white;" type='text' ng-model='search' placeholder='filter'/> </center>
      	<ul>
         <li><a ng-click="sendMsg($event)" value="new Message" class="round green">Add<span class="round">add your message here</span></a></li>
  
