--- a/client/app/messages/msgHistory.html
+++ b/client/app/messages/msgHistory.html
@@ -14,14 +14,14 @@
             <td class="col-lg-6"></td>
             <td >
               <p class="msgText col-lg-8 col-md-8 col-sm-8"  style="text-align: right;">{{msg.text}}</p>
-              <img style="height:50px ; width:50px;" src="{{user.image}}" class="msgPic img-circle col-lg-4 col-md-4 col-sm-4"/>
+              <img style="width: 20%" src="{{user.image}}" class="msgPic img-circle col-lg-4 col-md-4 col-sm-4"/>
             </td>
           </tr>
           <br>
           <tr style="background-color: #ccf2ff;" ng-if="msg.from===friend.username">
           <br>
             <td>
-              <img style="height:50px ; width:50px;" src="{{friend.image}}" class="msgPic img-circle col-lg-4 col-md-4 col-sm-4"/>
+              <img style="width: 20%;" src="{{friend.image}}" class="msgPic img-circle col-lg-4 col-md-4 col-sm-4"/>
               <p class="msgText col-lg-8 col-md-8 col-sm-8">{{msg.text}}</p>
             </td>
             <td class="col-lg-6"></td>
